# forwarder

./: .gitignore  CLAUDE.md  README.md  bash.exe.stackdump  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  STYLE_GUIDE.md  TROUBLESHOOTING.md
scripts/: release.sh
src/: App.tsx  CLAUDE.md
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  credential.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/config/: store.rs  types.rs
src-tauri/src/ssh/: key_format.rs  known_hosts.rs  mod.rs  session.rs  socks5.rs  types.rs
src-tauri/tests/: ssh_integration.rs
src/__tests__/: setup.ts  types.test.ts
src/__tests__/components/: ConnectionForm.test.tsx  ConnectionStatus.test.tsx
src/__tests__/hooks/: useTauri.test.ts
src/components/: ConnectionForm.tsx  ConnectionList.tsx  ConnectionStatus.tsx  ForwardingRule.tsx  HelpDialog.tsx  Layout.tsx  SettingsView.tsx
src/components/ui/: Input.tsx  Select.tsx  Toggle.tsx
src/hooks/: useConnections.ts  useTauri.ts  useTheme.ts
src/i18n/: en.ts  index.ts  ko.ts
src/styles/: global.css
src/types/: index.ts
tests/: docker-compose.yml
tests/fixtures/: test_key
tests/ssh-server/: Dockerfile  authorized_keys  entrypoint.sh
