[package]
name = "forwarder"
version = "0.2.0"
edition = "2021"
description = "SSH Port Forwarding Manager"

[lib]
name = "forwarder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "forwarder"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
russh = "0.46"
russh-keys = "0.46"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["windows-native"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
dirs = "6"
tauri-plugin-single-instance = "2.4.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
